--- a/src/renderer/main/App.module.scss
+++ b/src/renderer/main/App.module.scss
@@ -1,6 +1,7 @@
 .workspace {
   position: absolute;
   display: flex;
+  flex-direction: column;
   left: 0;
   right: 0;
   top: 31px;
@@ -9,7 +10,7 @@
 
 .panels {
   width: 100%;
-  height: 100%;
+  flex: 1;
   position: relative;
 }
 
